# PirateJam

./: CMakeLists.txt  main.c
res/compiled_shaders/: CMakeLists.txt  cube.glsl.h
src/: CMakeLists.txt  sokol.c
